--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,74 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Login</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <title>Asamblea</title>
+    <%- include('partials/head') %> <!-- <link rel="stylesheet" href="main.css"> /// partial para repetir en cada una de las paginas -->
 </head>
 <body>
-    <div class="login-container">
-        <h2>Iniciar sesión</h2>
-        <form action="/login" method="POST">
-            <div>
-                <label for="usuario">Usuario:</label>
-                <input type="text" id="usuario" name="usuario" required>
-            </div>
-            <div>
-                <label for="contrasena">Contraseña:</label>
-                <input type="password" id="contrasena" name="contrasena" required>
-            </div>
-            <button type="submit">Iniciar sesión</button>
-        </form>
-    </div>
+    <script src="server.js"></script>
+    <%- include('partials/navigation') %>
+    <div class="content">
+        <div class="background-container">
+            <!-- Aquí se aplica el fondo -->
+        </div>
+        <div class="register-form"> 
+                <form onsubmit="clearFields()" id="loginForm" action="/auth" method='POST'>
+                    <hr class="divider">
+                    <label for="user" >Usuario</label>           
+                    <input type="text" class="simple-border" placeholder="Usuario" name="user" autocomplete="off" required>
+
+                    <label for="pass" >Contraseña</label>           
+                    <input type="password" class="simple-border" placeholder="Contraseña" name="pass" autocomplete="off" required> 
+
+                    <br><br>
+                    <div style="display: inline;">
+                        <h5></h5>
+                        <input type="submit" class="btn-login" value="Login">
+                    </div>
+                </form>    
+        </div>
+    </div>   
+
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', async function(event) {
+            event.preventDefault(); // Evitar que el formulario se envíe de forma tradicional
+
+            const formData = new FormData(this);
+            const response = await fetch('/auth', {
+                method: 'POST',
+                body: new URLSearchParams(formData)
+            });
+
+            const result = await response.json();
+
+            if (result.status === 'success') {
+                Swal.fire({
+                    title: result.title,
+                    text: result.message,
+                    icon: result.status,
+                    showConfirmButton: false,
+                    timer: 1500
+                }).then(() => {
+                    window.location.href = '/inventarios'; // Redirigir al usuario si es necesario
+                });
+            } else {
+                Swal.fire({
+                    title: result.title,
+                    text: result.message,
+                    icon: result.status,
+                    showConfirmButton: true
+                });
+            }
+        });
+    </script>
+    <%- include('partials/footer') %>  
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
+
+
+
